--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="tab_unchecked">#B9B9B9</color>
 
     <color name="text_view">#323232</color>
+    <color name="text_color_chat">#ffffff</color>
+    <color name="text_color_chat_yellow">#FFFFCB00</color>
+    <color name="text_color_chat_orange">#ff6e23</color>
     <color name="textcolor_white_toolbar">#70000000</color>
     <color name="textcolor_white_toolbar_right">#ff2b3f</color>
     <color name="status_white_toolbar">#181818</color>
