--- a/app/src/main/res/layout/dialog_snatch_his.xml
+++ b/app/src/main/res/layout/dialog_snatch_his.xml
@@ -71,7 +71,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/rv_snatch_his"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:overScrollMode="never" />
     </LinearLayout>
 </LinearLayout>
