--- a/app/src/main/res/layout/activity_feed_back_layout.xml
+++ b/app/src/main/res/layout/activity_feed_back_layout.xml
@@ -5,7 +5,7 @@
     android:background="@color/font_color_49"
     android:orientation="vertical">
 
-    <include layout="@layout/comm_toolbar" />
+    <include layout="@layout/white_toolbar" />
 
     <EditText
         android:id="@+id/et_feedback"
