--- a/app/src/main/res/layout/dialog_snatch.xml
+++ b/app/src/main/res/layout/dialog_snatch.xml
@@ -290,23 +290,23 @@
 
 
                 <TextView
+                    android:id="@+id/tv_tips_1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="12dp"
                     android:paddingLeft="12dp"
                     android:paddingRight="12dp"
-                    android:text="每人每期最多参与10次，每参与1次增加1个礼物，参与次数越多中奖概率越高。"
-                    android:textColor="#40ffffff"
+                    android:textColor="#70ffffff"
                     android:textSize="10sp" />
 
                 <TextView
+                    android:id="@+id/tv_tips_2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="6dp"
                     android:paddingLeft="12dp"
                     android:paddingRight="12dp"
-                    android:text="每期限时30分钟，到点后系统会抽取一名萌友独得所有已累计的礼物"
-                    android:textColor="#40ffffff"
+                    android:textColor="#70ffffff"
                     android:textSize="10sp" />
             </LinearLayout>
 
