--- a/app/src/main/res/layout/item_search_home.xml
+++ b/app/src/main/res/layout/item_search_home.xml
@@ -18,7 +18,7 @@
             android:id="@+id/iv_icon"
             android:layout_width="45dp"
             android:layout_height="45dp"
-            android:src="@drawable/ic_launcher" />
+            android:src="@drawable/ic_launcher_search" />
 
         <LinearLayout
             android:layout_width="match_parent"
