--- a/app/src/main/res/layout/item_msg_main.xml
+++ b/app/src/main/res/layout/item_msg_main.xml
@@ -4,13 +4,14 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:paddingBottom="8.5dp"
+    android:paddingBottom="10.5dp"
     android:paddingLeft="13dp"
     android:paddingRight="13dp"
     android:paddingTop="13dp">
 
 
     <ImageView
+        android:id="@+id/iv_item_mag_main"
         android:layout_width="50dp"
         android:layout_height="50dp" />
 
@@ -21,22 +22,23 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/tv_name"
+            android:id="@+id/tv_name_item_msg_main"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
-            android:text="系统"
+            android:textColor="#70010101"
+            android:textSize="15sp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_weight="1" />
 
         <TextView
-            android:id="@+id/tv_state"
+            android:id="@+id/tv_num_item_msg_main"
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:gravity="center"
-            android:text="系统"
-            android:textSize="6sp"
+            android:textColor="#40000000"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/tv_name"
+            app:layout_constraintTop_toBottomOf="@+id/tv_name_item_msg_main"
             app:layout_constraintVertical_weight="1" />
 
         <View
@@ -48,7 +50,8 @@
         <ImageView
             android:layout_width="7.5dp"
             android:layout_height="13dp"
-            android:src="@drawable/ic_arrow_right"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_mine_item_arrow"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
