--- a/app/src/main/res/layout/empty_msg_main.xml
+++ b/app/src/main/res/layout/empty_msg_main.xml
@@ -2,12 +2,13 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:gravity="center"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
 
     <ImageView
         android:layout_width="91.5dp"
         android:layout_height="114dp"
+        android:layout_marginTop="160dp"
         android:src="@drawable/ic_empty_msg" />
 
     <TextView
