--- a/app/src/main/res/layout/fragment_pull_refresh.xml
+++ b/app/src/main/res/layout/fragment_pull_refresh.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
@@ -13,6 +13,15 @@
     <com.whzl.mengbi.ui.widget.view.PullRecycler
         android:id="@+id/pull_recycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_below="@id/fl_contain"
+        android:background="@color/white" />
 
-</LinearLayout>
+    <include
+        android:id="@+id/divider"
+        layout="@layout/divider_shawdow_white"
+        android:layout_width="match_parent"
+        android:layout_height="6.5dp"
+        android:layout_below="@id/fl_contain" />
+
+</RelativeLayout>
