--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -171,7 +171,7 @@
 
     <style name="main_tab">
         <item name="android:layout_width">0dp</item>
-        <item name="android:paddingTop">2dp</item>
+        <item name="android:paddingTop">4dp</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_weight">1</item>
         <item name="android:button">@null</item>
@@ -228,27 +228,27 @@
         <item name="android:layout_centerVertical">true</item>
         <item name="android:layout_marginLeft">19dp</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">@color/font_color_47</item>
-        <item name="android:textSize">15sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">#70000000</item>
+        <item name="android:textSize">13sp</item>
     </style>
 
     <style name="user_info_option_right_text">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
         <item name="android:layout_alignParentRight">true</item>
-        <item name="android:layout_marginRight">15dp</item>
-        <item name="android:drawablePadding">10dp</item>
+        <item name="android:layout_marginRight">12dp</item>
+        <item name="android:drawablePadding">15.5dp</item>
         <item name="android:drawableRight">@drawable/arrowright</item>
         <item name="android:gravity">center</item>
-        <item name="android:textColor">#646464</item>
-        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">#000000</item>
+        <item name="android:textSize">13sp</item>
     </style>
 
     <style name="user_info_option_divider">
         <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">1dp</item>
-        <item name="android:background">@color/font_color_12</item>
+        <item name="android:layout_height">0.5dp</item>
+        <item name="android:background">#10000000</item>
+        <item name="android:layout_marginLeft">47dp</item>
     </style>
 
     <style name="setting_option_text_style">
