--- a/app/src/main/res/layout/fragment_pull_refresh.xml
+++ b/app/src/main/res/layout/fragment_pull_refresh.xml
@@ -14,8 +14,7 @@
         android:id="@+id/pull_recycler"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/fl_contain"
-        android:background="@color/white" />
+        android:layout_below="@id/fl_contain" />
 
     <include
         android:id="@+id/divider"
