--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -17,16 +17,18 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-            <LinearLayout
+            <android.support.constraint.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:orientation="vertical">
 
                 <RelativeLayout
+                    android:id="@+id/rl_top"
                     android:layout_width="match_parent"
                     android:layout_height="35dp"
-                    android:layout_marginTop="6.5dp">
+                    android:layout_marginTop="6.5dp"
+                    app:layout_constraintTop_toTopOf="parent">
 
                     <RelativeLayout
                         android:id="@+id/rl_anchor_info"
@@ -128,7 +130,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="28dp"
                     android:layout_marginLeft="6dp"
-                    android:layout_marginTop="6.5dp">
+                    android:layout_marginTop="6.5dp"
+                    app:layout_constraintTop_toBottomOf="@id/rl_top">
 
                     <RelativeLayout
                         android:id="@+id/rl_head"
@@ -220,6 +223,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="7dp"
                     android:background="@color/colorblack"
+                    app:layout_constraintTop_toBottomOf="@id/rl_contribution_container"
                     app:ratio="1.33">
 
                     <android.support.constraint.ConstraintLayout
@@ -540,72 +544,69 @@
                 </com.whzl.mengbi.ui.widget.view.RatioRelativeLayout>
 
 
-                <RelativeLayout
+                <FrameLayout
+                    android:background="@color/transparent"
+                    android:id="@+id/fragment_container"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="0dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/ratio_layout" />
 
-                    <FrameLayout
-                        android:id="@+id/fragment_container"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="#343a42" />
-
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="26dp"
-                        android:layout_alignParentTop="true"
-                        android:background="@drawable/bg_chat_top_translate" />
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="26dp"
+                    android:layout_alignParentTop="true"
+                    android:background="@drawable/bg_chat_top_translate"
+                    app:layout_constraintTop_toBottomOf="@+id/ratio_layout" />
 
 
-                    <RelativeLayout
-                        android:id="@+id/chatActivityContainer"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent">
+                <com.youth.banner.Banner
+                    android:id="@+id/banner"
+                    android:layout_width="60dp"
+                    android:layout_height="60dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginRight="9dp"
+                    android:layout_marginTop="7dp"
+                    app:layout_constraintRight_toRightOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/ratio_layout" />
 
-                        <com.youth.banner.Banner
-                            android:id="@+id/banner"
-                            android:layout_width="60dp"
-                            android:layout_height="60dp"
-                            android:layout_alignParentRight="true"
-                            android:layout_marginRight="9dp"
-                            android:layout_marginTop="7dp" />
-
-                        <LinearLayout
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_alignParentRight="true"
-                            android:layout_marginBottom="5dp"
-                            android:layout_marginRight="7dp"
-                            android:gravity="center_horizontal"
-                            android:orientation="vertical">
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentRight="true"
+                    android:layout_marginBottom="5dp"
+                    android:layout_marginRight="7dp"
+                    android:gravity="center_horizontal"
+                    android:orientation="vertical"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent">
 
 
-                            <android.support.v4.view.ViewPager
-                                android:id="@+id/vp_activity"
-                                android:layout_width="100dp"
-                                android:layout_height="130dp"
-                                android:overScrollMode="never"
-                                android:visibility="visible" />
+                    <android.support.v4.view.ViewPager
+                        android:id="@+id/vp_activity"
+                        android:layout_width="100dp"
+                        android:layout_height="130dp"
+                        android:overScrollMode="never"
+                        android:visibility="visible" />
 
-                            <LinearLayout
-                                android:id="@+id/ll_pager_index"
-                                android:layout_width="100dp"
-                                android:layout_height="5dp"
-                                android:layout_marginTop="5dp"
-                                android:gravity="center"
-                                android:orientation="horizontal" />
-                        </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/ll_pager_index"
+                        android:layout_width="100dp"
+                        android:layout_height="5dp"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:orientation="horizontal" />
+                </LinearLayout>
 
-                        <android.support.v7.widget.RecyclerView
-                            android:id="@+id/rv_redpack"
-                            android:layout_width="wrap_content"
-                            android:layout_height="37dp"
-                            android:layout_marginTop="12dp"
-                            android:overScrollMode="never" />
-                    </RelativeLayout>
-                </RelativeLayout>
-            </LinearLayout>
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_redpack"
+                    android:layout_width="wrap_content"
+                    android:layout_height="37dp"
+                    android:layout_marginTop="12dp"
+                    android:overScrollMode="never"
+                    app:layout_constraintTop_toBottomOf="@id/ratio_layout" />
+            </android.support.constraint.ConstraintLayout>
 
             <RelativeLayout
                 android:id="@+id/rl_bottom_container"
