--- a/app/src/main/res/layout/fragment_nobility.xml
+++ b/app/src/main/res/layout/fragment_nobility.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,17 +8,17 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/vp_nobility"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        android:layout_marginTop="12dp"
+        android:overScrollMode="never" />
 
     <com.whzl.mengbi.ui.widget.tablayout.TabLayout
-        android:background="@color/red_bag"
         android:id="@+id/tablayout_nobility"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:textSize="15sp"
-        app:tabGravity="fill"
-        app:tabIndicatorColor="@color/white"
-        app:tabMode="fixed"
-        app:tabSelectedTextColor="@color/white"
+        style="@style/tab_nobility"
+        android:layout_marginTop="12dp"
+        app:tabMaxWidth="200dp"
+        app:tabMinWidth="20dp"
+        app:tabPaddingEnd="3dp"
+        app:tabPaddingStart="3dp"
         app:tabTextColor="#70ffffff" />
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
