--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -465,4 +465,15 @@
         <item name="tabSelectedTextColor">@color/white</item>
         <item name="tabBackground">@color/tab_color</item>
     </style>
+
+    <style name="tab_nobility" parent="Widget.Design.TabLayout">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">35dp</item>
+        <!--<item name="tabGravity">fill</item>-->
+        <item name="tabMode">fixed</item>
+        <item name="tabIndicatorColor">@color/white</item>
+        <item name="tabSelectedTextColor">@color/white</item>
+        <item name="android:textColor">#40ffffff</item>
+        <item name="android:textSize">@dimen/view_space</item>
+    </style>
 </resources>
