--- a/app/src/main/res/layout/dialog_live_stop.xml
+++ b/app/src/main/res/layout/dialog_live_stop.xml
@@ -107,7 +107,7 @@
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:layout_marginTop="14dp"
-            android:scaleType="fitXY"
+            android:scaleType="centerCrop"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_recommend" />
@@ -118,7 +118,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="14dp"
             android:layout_marginTop="15dp"
-            android:drawableLeft="@drawable/ic_refresh_goodnum_shop"
+            android:drawableLeft="@drawable/ic_play_stop_refresh"
             android:drawablePadding="8dp"
             android:text="换一个"
             android:textColor="#70000000"
@@ -144,10 +144,11 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentRight="true"
                 android:background="#70000000"
-                android:drawableEnd="@drawable/arrowright"
+                android:drawableEnd="@drawable/ic_play_stop_arrow"
                 android:ellipsize="end"
                 android:gravity="center"
                 android:paddingLeft="12dp"
+                android:paddingRight="2dp"
                 android:singleLine="true"
                 android:text="主播昵称"
                 android:textColor="@color/white"
