--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -379,10 +379,10 @@
                             android:textSize="15sp" />
 
                         <TextView
+                            android:id="@+id/tv_stop_time"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="12dp"
-                            android:text="上次开播：10小时前"
                             android:textColor="#80ffffff"
                             android:textSize="12sp" />
 
