--- a/app/src/main/res/layout/comm_recycler.xml
+++ b/app/src/main/res/layout/comm_recycler.xml
@@ -1,13 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?><!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"--><!--android:layout_width="match_parent"--><!--android:layout_height="match_parent">-->
-
-<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/recycler"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:overScrollMode="never"
-    android:paddingTop="4dp">
+    android:orientation="horizontal">
 
-</android.support.v7.widget.RecyclerView>
+    <android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/recycler"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_weight="1"
+        android:overScrollMode="never" />
+
+    <View
+        android:id="@+id/view_click"
+        android:layout_width="@dimen/margin_right_chat"
+        android:layout_height="match_parent" />
+
+</LinearLayout>
 
     <!--<LinearLayout--><!--android:id="@+id/ll_enter"--><!--android:layout_width="200dp"--><!--android:layout_height="wrap_content"--><!--android:layout_marginTop="20dp"--><!--android:orientation="horizontal"--><!--android:padding="5dp"--><!--android:background="@drawable/bg_chat_normal"--><!--android:visibility="gone">-->
 
