--- a/app/src/main/res/layout/dialog_live_house_chat.xml
+++ b/app/src/main/res/layout/dialog_live_house_chat.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@color/transparent"
+    android:layout_height="match_parent"
     android:gravity="right"
     android:orientation="vertical">
 
     <View
         android:id="@+id/dialog_out"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_weight="1" />
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:visibility="gone" />
 
     <include layout="@layout/chat_layout" />
 
