--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -66,4 +66,6 @@
     <dimen name="text_content_free_gift">10sp</dimen>
     <dimen name="view_space">6.5dp</dimen>
     <dimen name="textsize_12">12sp</dimen>
+    <dimen name="height_live_activity">130dp</dimen>
+    <dimen name="widgh_live_activity">100dp</dimen>
 </resources>
