--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -581,12 +581,12 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/ratio_layout" />
 
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="26dp"
-                    android:layout_alignParentTop="true"
-                    android:background="@drawable/bg_chat_top_translate"
-                    app:layout_constraintTop_toBottomOf="@+id/ratio_layout" />
+                <!--<View-->
+                <!--android:layout_width="match_parent"-->
+                <!--android:layout_height="26dp"-->
+                <!--android:layout_alignParentTop="true"-->
+                <!--android:background="@drawable/bg_chat_top_translate"-->
+                <!--app:layout_constraintTop_toBottomOf="@+id/ratio_layout" />-->
 
 
                 <com.youth.banner.Banner
@@ -614,8 +614,8 @@
 
                     <android.support.v4.view.ViewPager
                         android:id="@+id/vp_activity"
-                        android:layout_width="100dp"
-                        android:layout_height="130dp"
+                        android:layout_width="@dimen/widgh_live_activity"
+                        android:layout_height="@dimen/height_live_activity"
                         android:overScrollMode="never"
                         android:visibility="visible" />
 
