--- a/app/src/main/res/layout/dialog_anchor_wish.xml
+++ b/app/src/main/res/layout/dialog_anchor_wish.xml
@@ -106,7 +106,7 @@
                 android:id="@+id/tv_wealth"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.8"
+                android:layout_weight="1"
                 android:ellipsize="middle"
                 android:singleLine="true"
                 android:textColor="#f9f9f9"
@@ -118,21 +118,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
-                android:layout_weight="1"
+                android:layout_weight="1.3"
                 android:ellipsize="middle"
+                android:gravity="end"
                 android:singleLine="true"
                 android:textColor="#f9f9f9"
                 android:textSize="11.5sp" />
 
-            <TextView
-                android:id="@+id/tv_type"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ellipsize="middle"
-                android:singleLine="true"
-                android:textColor="#f9f9f9"
-                android:textSize="11.5sp" />
         </LinearLayout>
 
         <LinearLayout
@@ -148,7 +140,7 @@
                 android:id="@+id/tv_wealth_offical"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1.8"
+                android:layout_weight="1"
                 android:ellipsize="middle"
                 android:singleLine="true"
                 android:textColor="#f9f9f9"
@@ -160,21 +152,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
-                android:layout_weight="1"
+                android:layout_weight="1.3"
                 android:ellipsize="middle"
+                android:gravity="end"
                 android:singleLine="true"
                 android:textColor="#f9f9f9"
                 android:textSize="11.5sp" />
 
-            <TextView
-                android:id="@+id/tv_type_offical"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:ellipsize="middle"
-                android:singleLine="true"
-                android:textColor="#f9f9f9"
-                android:textSize="11.5sp" />
+
         </LinearLayout>
     </android.support.constraint.ConstraintLayout>
 </LinearLayout>
