--- a/app/src/main/res/layout/fragment_anchor_wish.xml
+++ b/app/src/main/res/layout/fragment_anchor_wish.xml
@@ -22,37 +22,47 @@
         android:layout_marginTop="4dp"
         android:background="@drawable/bg_image_anchor_wish" />
 
-    <TextView
-        android:id="@+id/tv_total"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:textColor="#5854c5"
-        android:textSize="8sp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="3dp"
+        android:background="@drawable/bg_anchor_wish_list"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_unfinish"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:textColor="#5854c5"
-        android:textSize="8sp" />
 
-    <TextView
-        android:id="@+id/tv_support"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:textColor="#5854c5"
-        android:textSize="8sp" />
+        <TextView
+            android:id="@+id/tv_total"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp"
+            android:textColor="#5854c5"
+            android:textSize="8sp" />
 
-    <TextView
-        android:id="@+id/tv_time"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="2dp"
-        android:drawableLeft="@drawable/ic_timer_anchor_wish"
-        android:drawablePadding="4dp"
-        android:textColor="#f05907"
-        android:textSize="8sp" />
+        <TextView
+            android:id="@+id/tv_unfinish"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:textColor="#5854c5"
+            android:textSize="8sp" />
+
+        <TextView
+            android:id="@+id/tv_support"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:textColor="#5854c5"
+            android:textSize="8sp" />
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="2dp"
+            android:drawableLeft="@drawable/ic_timer_anchor_wish"
+            android:drawablePadding="4dp"
+            android:textColor="#f05907"
+            android:textSize="8sp" />
+    </LinearLayout>
 </LinearLayout>
