--- a/app/src/main/res/layout/dialog_live_stop.xml
+++ b/app/src/main/res/layout/dialog_live_stop.xml
@@ -116,15 +116,26 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="14dp"
+            android:layout_marginLeft="10dp"
             android:layout_marginTop="15dp"
-            android:drawableLeft="@drawable/ic_play_stop_refresh"
-            android:drawablePadding="8dp"
             android:text="换一个"
             android:textColor="#70000000"
             android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/iv_cover_to" />
+
+        <ImageView
+            android:id="@+id/iv_change_live_stop"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="14dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginTop="15dp"
+            android:src="@drawable/ic_play_stop_refresh"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/tv_change_live_stop"
             app:layout_constraintTop_toBottomOf="@id/iv_cover_to" />
 
         <RelativeLayout
