--- a/app/src/main/res/layout/item_anchor_wish.xml
+++ b/app/src/main/res/layout/item_anchor_wish.xml
@@ -20,7 +20,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20.5dp"
-        android:maxLength="8"
+        android:ellipsize="middle"
+        android:maxLength="10"
+        android:singleLine="true"
         android:textColor="#694abe"
         android:textSize="12.5sp"
         android:textStyle="bold" />
