--- a/app/src/main/res/layout/item_walfare.xml
+++ b/app/src/main/res/layout/item_walfare.xml
@@ -37,7 +37,7 @@
                 android:id="@+id/tv_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textColor="@color/text_hint"
+                android:textColor="#ff2b3f"
                 android:textSize="14sp" />
         </LinearLayout>
 
@@ -50,19 +50,19 @@
             android:layout_centerVertical="true"
             android:layout_marginLeft="50dp"
             android:layout_marginRight="96dp"
-            android:textColor="@color/text_hint"
+            android:textColor="#70000000"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/tv_state"
             android:layout_width="70dp"
-            android:gravity="center"
             android:layout_height="32dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="14dp"
             android:background="@drawable/btn_normal_walfare"
-            android:textColor="@color/white"
+            android:gravity="center"
+            android:textColor="#70000000"
             android:textSize="15sp" />
 
     </RelativeLayout>
