--- a/app/src/main/res/drawable/btn_have_receive_walfare.xml
+++ b/app/src/main/res/drawable/btn_have_receive_walfare.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#d9d9d9" />
+    <solid android:color="#dcdcdc" />
 
     <corners android:radius="16dp" />
 </shape>
