--- a/app/src/main/res/drawable/btn_normal_walfare.xml
+++ b/app/src/main/res/drawable/btn_normal_walfare.xml
@@ -2,7 +2,8 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#2198dc" />
-
+    <stroke
+        android:width="1dp"
+        android:color="#40000000" />
     <corners android:radius="16dp" />
 </shape>
