--- a/app/src/main/res/layout/head_walfare.xml
+++ b/app/src/main/res/layout/head_walfare.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="32dp"
+    android:layout_height="40dp"
     android:background="@color/white"
     android:gravity="center_vertical"
     android:orientation="horizontal">
@@ -11,8 +11,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="70dp"
         android:text="任务内容和奖励"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="#40000000"
+        android:textSize="15sp" />
 
     <TextView
         android:layout_width="match_parent"
@@ -20,7 +20,7 @@
         android:layout_marginRight="96dp"
         android:gravity="end"
         android:text="进度"
-        android:textColor="@color/text_hint"
-        android:textSize="16sp" />
+        android:textColor="#40000000"
+        android:textSize="15sp" />
 
 </LinearLayout>
